--- a/Crop Prediction Project Using Flask.ipynb
+++ b/Crop Prediction Project Using Flask.ipynb
@@ -2,31 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "c7db7bef-eda6-4f79-a788-a2f8ad03c6e2",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'warnings' has no attribute 'ignore'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m--------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[28], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m accuracy_score,r2_score\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mwarnings\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m \u001b[43mwarnings\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mignore\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFilterwarnings\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'warnings' has no attribute 'ignore'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score,r2_score\n",
-    "import warnings\n",
-    "warnings."
+    "from sklearn.metrics import accuracy_score,r2_score\n"
    ]
   },
   {
